# batch-elt-data-pipelines-gender-pay-gap

./: .gitignore  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  ruff.toml  test.py
.github/workflows/: branch_deployments.yml  deploy.yml  lint_dbt_ci.yml  lint_python_ci.yml
integration/data/: EEH 2016.xlsx  EEH 2018.xlsx  EEH 2021.xlsx  EEH 2023.xlsx  national_occupation_trend_-_august_2025.xlsx
integration/data/S3/: EEH_2016_s3.csv  EEH_2018_s3.csv  EEH_2021_s3.csv  EEH_2023_s3.csv  EEH_2025_s3_test.csv  EEH_test.csv  employment.csv
integration/destination/: snowflake_airbyte_setup.sql
integration/notebooks/: EEH data preprocessing.ipynb  boto3.ipynb
orchestration/: README.md  template.env
orchestration/analytics/: definitions.py  ops.py  test.py
orchestration/analytics/assets/: airbyte.py  dbt.py  preprocess.py
orchestration/transformation/dw/: dbt_project.yml  package-lock.yml
src/analytics/: jobs.py
src/analytics/assets/: airbyte.py
transformation/: .sqlfluff
transformation/dw/: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transformation/dw/models/: test.sql
transformation/dw/models/marts/: dim_occupation.sql  fact_eeh.sql  fact_gender_pay_gap.sql
transformation/dw/models/staging/: stg_eeh.sql  stg_eeh.yml  stg_eeh_test.sql  stg_emp.sql  stg_emp.yml
transformation/dw/tests/: schema.yml
transformation/dw/tests/generic/: test_is_between.sql  test_no_duplicates.sql
transformation/dw/tests/singular/: assert_no_duplicates.sql
visualisation/: dashboard.pbix
(+3 files in other folders)
