[project]
name = "analytics"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-cloud",
    "pandas",
    "dagster-airbyte",
    "dagster-dbt",
    "dbt_core",
    "dbt_snowflake"
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "analytics.definitions"
code_location_name = "analytics"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "analytics"
